trying to fix bug with one content card turning sideways on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -158,7 +158,6 @@ h2 {
   align-items: center;
   color: var(--blue);
   width: 46.5%;
-  height: max-content;
 }
 /* Image sliding overlay and transparency code partly from w3 schools */
 /* https://www.w3schools.com/css/tryit.asp?filename=trycss_css_image_overlay_slideright */
